[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/GuiControls.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/World.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
scale = Vector2( 0.589737, 0.589737 )
script = ExtResource( 2 )

[node name="GuiControls" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" parent="GuiControls" index="0"]
margin_right = 314.0
margin_bottom = 109.0

[node name="SeparationLabel" parent="GuiControls/VBoxContainer" index="0"]
margin_right = 314.0

[node name="SeparationSlider" parent="GuiControls/VBoxContainer" index="1"]
margin_right = 314.0

[node name="CohesionLabel" parent="GuiControls/VBoxContainer" index="2"]
margin_right = 314.0

[node name="CohesionSlider" parent="GuiControls/VBoxContainer" index="3"]
margin_right = 314.0

[node name="AlignmentLabel" parent="GuiControls/VBoxContainer" index="4"]
margin_right = 314.0

[node name="AlignmentSlider" parent="GuiControls/VBoxContainer" index="5"]
margin_right = 314.0

[node name="HBoxContainer" parent="GuiControls/VBoxContainer" index="6"]
margin_right = 314.0

[editable path="GuiControls"]
